--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -21,8 +21,9 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
+              "src/games.ico",
               "src/assets"
+
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
